--- a/travis.yml
+++ b/travis.yml
@@ -12,6 +12,7 @@ cache:
    directories:
      - node_modules
 before_script:
-  - npm install ./
+  - npm install
 script:
-  - gitfolio k4ustu3h
+  - gitfolio k4ustu3h &
+  - npm test
