--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,20 @@
+dist: bionic
 language: node_js
-
 node_js:
-  - 7
-  
+  - 11
+cache:
+   directories:
+     - node_modules
+before_script:
+  - npm install -g
+script:
+  - gitfolio build k4ustu3h
 deploy:
   provider: pages
   skip_cleanup: true
   github_token: $GITHUB_TOKEN
   keep_history: true
-  
-on:
-  branch: master
-  
-cache:
-   directories:
-     - node_modules
-     
-before_script:
-  - npm install -g
-  
-script:
-  - gitfolio k4ustu3h
+  local_dir: dist
+  verbose: true
+  on:
+   branch: master
