--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,19 @@ dist: bionic
 language: node_js
 node_js:
   - 11
+addons:
+  chrome: stable
 cache:
-   directories:
-     - node_modules
+  directories:
+    - node_modules
+before_install:
+  - npm install -g @lhci/cli@0.3.x
 before_script:
   - npm install -g
 script:
   - gitfolio build k4ustu3h --fork --theme dark --sort updated --twitter k4ustu3h_ --dribbble k4ustu3h --email k4ustu3h@gmail.com --codepen k4ustu3h --dev k4ustu3h --instagram k4ustu3h
+after_success:
+  - lhci autorun --upload.target=temporary-public-storage --staticDistDir=/home/travis/build/k4ustu3h/gitfolio/dist
 deploy:
   provider: pages
   skip_cleanup: true
@@ -17,4 +23,4 @@ deploy:
   local_dir: dist
   verbose: true
   on:
-   branch: master
+    branch: master
