--- a/package.json
+++ b/package.json
@@ -1,49 +1,98 @@
 {
-  "name": "gitfolio",
-  "version": "0.1.5",
-  "description": "a portfolio website for everyone to showcase their work",
-  "main": "build.js",
-  "bin": "bin/gitfolio.js",
-  "scripts": {
-    "cli": "OUT_DIR='./dist' node bin/gitfolio.js",
-    "clean": "rm -rf ./dist/*",
-    "prettier": "prettier --write \"./**/*.{js,jsx,json,html,css,md}\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": {
-    "name": "@imfunniee and community",
-    "email": "imfunny@wybemf.com",
-    "url": "https://imfunniee.github.io"
-  },
-  "bugs": "https://github.com/imfunniee/gitfolio/issues",
-  "homepage": "https://github.com/imfunniee/gitfolio",
-  "keywords": [
-    "personal-website",
-    "github",
-    "portfolio",
-    "portfolio website",
-    "gitfolio",
-    "git"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/imfunniee/gitfolio"
-  },
-  "license": "GPL-3.0",
-  "dependencies": {
-    "bluebird": "^3.7.2",
-    "body-parser": "^1.19.0",
-    "commander": "4.0.1",
-    "ejs": "3.0.1",
-    "express": "^4.17.1",
-    "github-emoji": "^1.1.1",
-    "got": "10.0.4",
-    "handlebars": "^4.5.3",
-    "jsdom": "^15.2.1",
-    "ncp": "^2.0.0"
-  },
-  "devDependencies": {
-    "eslint": "^6.7.2",
-    "prettier": "1.19.1"
-  }
+
+"name": "gitfolio",
+
+"version": "0.1.5",
+
+"description": "a portfolio website for everyone to showcase their work",
+
+"main": "build.js",
+
+"bin": "bin/gitfolio.js",
+
+"scripts": {
+
+"cli": "OUT_DIR='./dist' node bin/gitfolio.js",
+
+"clean": "rm -rf ./dist/*",
+
+"prettier": "prettier --write \"./**/*.{js,jsx,json,html,css,md}\"",
+
+"test": "OUT_DIR='./dist' node bin/gitfolio.js build k4ustu3h --fork --theme dark --sort updated --twitter k4ustu3h_ --dribbble k4ustu3h --email k4ustu3h@gmail.com --codepen k4ustu3h --dev k4ustu3h --instagram k4ustu3h --telegram k4ustu3h --reddit kaustubhladiya"
+
+},
+
+"author": {
+
+"name": "@imfunniee and community",
+
+"email": "imfunny@wybemf.com",
+
+"url": "https://imfunniee.github.io"
+
+},
+
+"bugs": "https://github.com/imfunniee/gitfolio/issues",
+
+"homepage": "https://github.com/imfunniee/gitfolio",
+
+"keywords": [
+
+"personal-website",
+
+"github",
+
+"portfolio",
+
+"portfolio website",
+
+"gitfolio",
+
+"git"
+
+],
+
+"repository": {
+
+"type": "git",
+
+"url": "https://github.com/imfunniee/gitfolio"
+
+},
+
+"license": "GPL-3.0",
+
+"dependencies": {
+
+"bluebird": "^3.7.2",
+
+"body-parser": "^1.19.0",
+
+"commander": "4.0.1",
+
+"ejs": "3.0.1",
+
+"express": "^4.17.1",
+
+"github-emoji": "^1.1.1",
+
+"got": "10.0.4",
+
+"handlebars": "^4.5.3",
+
+"jsdom": "^15.2.1",
+
+"ncp": "^2.0.0"
+
+},
+
+"devDependencies": {
+
+"eslint": "^6.7.2",
+
+"prettier": "1.19.1"
+
 }
+
+}
+
