--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
   },
   "devDependencies": {
     "eslint": "^6.8.0",
-    "prettier": "1.19.1",
-    "xo": "^0.25.3"
+    "prettier": "1.19.1"
   }
 }
