--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "main": "build.js",
   "bin": "bin/gitfolio.js",
   "scripts": {
+    "build": "OUT_DIR='./dist' node bin/gitfolio.js build k4ustu3h --fork --theme dark --sort updated --twitter k4ustu3h_ --dribbble k4ustu3h --email k4ustu3h@gmail.com --codepen k4ustu3h --dev k4ustu3h --instagram k4ustu3h --telegram k4ustu3h --reddit kaustubhladiya --keybase k4ustu3h --facebook k4ustu3h",
     "cli": "OUT_DIR='./dist' node bin/gitfolio.js",
     "clean": "rm -rf ./dist/*",
     "prettier": "prettier --write \"./**/*.{js,jsx,json,html,css,md}\"",
-    "test": "OUT_DIR='./dist' node bin/gitfolio.js build k4ustu3h --fork --theme dark --sort updated --twitter k4ustu3h_ --dribbble k4ustu3h --email k4ustu3h@gmail.com --codepen k4ustu3h --dev k4ustu3h --instagram k4ustu3h --telegram k4ustu3h --reddit kaustubhladiya --keybase k4ustu3h --facebook k4ustu3h"
+    "snyk-protect": "snyk protect",
+    "prepare": "npm run snyk-protect",
+    "test": "snyk test"
   },
   "author": {
     "name": "@imfunniee and community",
@@ -40,10 +43,12 @@
     "got": "^10.2.2",
     "handlebars": "^4.1.2",
     "jsdom": "^15.1.0",
-    "ncp": "^2.0.0"
+    "ncp": "^2.0.0",
+    "snyk": "^1.279.1"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
     "prettier": "1.19.1"
-  }
+  },
+  "snyk": true
 }
