--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "commander": "^2.20.0",
     "ejs": "^3.0.1",
     "express": "^4.17.0",
+    "fs-extra": "8.1.0",
     "github-emoji": "^1.1.1",
     "got": "^10.2.2",
     "handlebars": "^4.1.2",
