--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ script:
   - npm run build
   - npm run prettier
 after_success:
-  - lhci autorun --upload.target=temporary-public-storage --staticDistDir=/home/travis/build/k4ustu3h/gitfolio/dist
+  - lhci autorun --upload.target=temporary-public-storage
 deploy:
   provider: pages:git
   token: $GITHUB_TOKEN
