--- a/package.json
+++ b/package.json
@@ -39,13 +39,12 @@
     "commander": "^2.20.0",
     "ejs": "^3.0.1",
     "express": "^4.17.0",
-    "fs-extra": "8.1.0",
     "github-emoji": "^1.1.1",
     "got": "^10.2.2",
-    "handlebars": "^4.1.2",
+    "handlebars": "^4.7.3",
     "jsdom": "^16.0.1",
     "ncp": "^2.0.0",
-    "snyk": "^1.279.1"
+    "snyk": "1.290.1"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
