--- a/package.json
+++ b/package.json
@@ -48,7 +48,11 @@
   },
   "devDependencies": {
     "eslint": "^6.8.0",
-    "prettier": "1.19.1"
+    "prettier": "^1.19.1",
+    "stylelint": "^13.2.0",
+    "stylelint-config-prettier": "^8.0.1",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-prettier": "^1.1.2"
   },
   "snyk": true
 }
