Updates and Fixes
Updated
  - acorn
  - got
  - jsdom
  - snyk
  - stylelint
Fixed
  - Moved script to populate.js so that username and bio variable can work.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "build.js",
   "bin": "bin/gitfolio.js",
   "scripts": {
-    "build": "OUT_DIR='./dist' node bin/gitfolio.js build k4ustu3h -f -t dark -s updated -c k4ustu3h -d k4ustu3h -D k4ustu3h -e k4ustu3h@gmail.com -F k4ustu3h -i k4ustu3h_ -k k4ustu3h -m k4ustu3h -r kaustubhladiya -E 16727002 -S k4ustu3h -T k4ustu3h -w k4ustu3h_ -x 9461231",
+    "build": "OUT_DIR='./dist' node bin/gitfolio.js build k4ustu3h -f -t dark -s updated -c k4ustu3h -d k4ustu3h -D k4ustu3h -e k4ustu3h@gmail.com -F k4ustu3h -i k4ustu3h -k k4ustu3h -m k4ustu3h -r kaustubhladiya -E 16727002 -S k4ustu3h -T k4ustu3h -w k4ustu3h_ -x 9461231",
     "cli": "OUT_DIR='./dist' node bin/gitfolio.js",
     "clean": "rm -rf ./dist/*",
     "prettier": "prettier --write \"./**/*.{js,jsx,json,html,css,md}\"",
@@ -40,16 +40,16 @@
     "ejs": "^3.0.1",
     "express": "^4.17.0",
     "github-emoji": "^1.1.1",
-    "got": "^10.2.2",
+    "got": "10.6.0",
     "handlebars": "^4.7.3",
-    "jsdom": "^16.0.1",
+    "jsdom": "^16.2.1",
     "ncp": "^2.0.0",
-    "snyk": "1.297.1"
+    "snyk": "1.299.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
     "prettier": "^1.19.1",
-    "stylelint": "^13.2.0",
+    "stylelint": "^13.2.1",
     "stylelint-config-prettier": "^8.0.1",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-prettier": "^1.1.2"
