--- a/package.json
+++ b/package.json
@@ -37,19 +37,20 @@
     "bluebird": "^3.5.4",
     "body-parser": "^1.19.0",
     "commander": "^2.20.0",
-    "ejs": "^3.0.1",
+    "ejs": "3.0.2",
     "express": "^4.17.0",
+    "fs-extra": "9.0.0",
     "github-emoji": "^1.1.1",
-    "got": "10.6.0",
-    "handlebars": "^4.7.3",
-    "jsdom": "^16.2.1",
+    "got": "11.0.2",
+    "handlebars": "4.7.6",
+    "jsdom": "16.2.2",
     "ncp": "^2.0.0",
-    "snyk": "1.299.0"
+    "snyk": "1.307.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
-    "prettier": "^1.19.1",
-    "stylelint": "^13.2.1",
+    "prettier": "2.0.5",
+    "stylelint": "13.3.3",
     "stylelint-config-prettier": "^8.0.1",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-prettier": "^1.1.2"
