--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "build.js",
   "bin": "bin/gitfolio.js",
   "scripts": {
-    "build": "OUT_DIR='./dist' node bin/gitfolio.js build k4ustu3h -f -t dark -s updated -c k4ustu3h -d k4ustu3h -D k4ustu3h -e k4ustu3h@gmail.com -F k4ustu3h -i k4ustu3h -k k4ustu3h -m k4ustu3h -r kaustubhladiya -E 16727002 -S k4ustu3h -T k4ustu3h -w k4ustu3h_ -x 9461231",
+    "build": "OUT_DIR='./dist' node bin/gitfolio.js build k4ustu3h -f -t dark -s updated -c k4ustu3h -d k4ustu3h -D k4ustu3h -e k4ustu3h@gmail.com -F k4ustu3h -i k4ustu3h -k k4ustu3h -m k4ustu3h -r kaustubhladiya -E 16727002 -S k4ustu3h -T k4ustu3h -w k4ustu3h -x 9461231",
     "cli": "OUT_DIR='./dist' node bin/gitfolio.js",
     "clean": "rm -rf ./dist/*",
     "prettier": "prettier --write \"./**/*.{js,jsx,json,html,css,md}\"",
@@ -37,20 +37,19 @@
     "bluebird": "^3.5.4",
     "body-parser": "^1.19.0",
     "commander": "^2.20.0",
-    "ejs": "3.0.2",
+    "ejs": "3.1.3",
     "express": "^4.17.0",
-    "fs-extra": "9.0.0",
     "github-emoji": "^1.1.1",
-    "got": "11.0.2",
+    "got": "11.3.0",
     "handlebars": "4.7.6",
     "jsdom": "16.2.2",
     "ncp": "^2.0.0",
-    "snyk": "1.307.0"
+    "snyk": "1.341.1"
   },
   "devDependencies": {
-    "eslint": "^6.8.0",
+    "eslint": "7.2.0",
     "prettier": "2.0.5",
-    "stylelint": "13.3.3",
+    "stylelint": "13.6.0",
     "stylelint-config-prettier": "^8.0.1",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-prettier": "^1.1.2"
