--- a/package.json
+++ b/package.json
@@ -37,20 +37,20 @@
     "bluebird": "^3.5.4",
     "body-parser": "^1.19.0",
     "commander": "^2.20.0",
-    "ejs": "3.1.3",
+    "ejs": "3.0.2",
     "express": "^4.17.0",
     "github-emoji": "^1.1.1",
-    "got": "11.3.0",
+    "got": "11.0.2",
     "handlebars": "4.7.6",
     "jsdom": "16.2.2",
     "ncp": "^2.0.0",
-    "snyk": "1.341.1"
+    "snyk": "1.348.2"
   },
   "devDependencies": {
-    "eslint": "7.2.0",
+    "eslint": "7.3.1",
     "prettier": "2.0.5",
-    "stylelint": "13.6.0",
-    "stylelint-config-prettier": "^8.0.1",
+    "stylelint": "13.6.1",
+    "stylelint-config-prettier": "8.0.2",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-prettier": "^1.1.2"
   },
