Add support for Pinterest domain verification key
Updated
  - snyk

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
 before_script:
   - npm install -g
 script:
-  - npm run build
+  - gitfolio build k4ustu3h -f -t dark -s updated -c k4ustu3h -d k4ustu3h -D k4ustu3h -e k4ustu3h@gmail.com -F k4ustu3h -g kaustubhladiya -i K_ -I k4ustu3h -k k4ustu3h -m k4ustu3h -p k4ustu3h -P 074c672fe9c3e43eb1565e6726bd2a79 -r kaustubhladiya -E 16727002 -S k4ustu3h -T k4ustu3h -w k4ustu3h -x 9461231 -y UCD79rV3UKNzMCkwMLgyteEw
   - npm run prettier
 after_success:
   - lhci autorun --upload.target=temporary-public-storage
